// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/common/Table should render error state 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c1 {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c3 {
  display: flex;
  flex-direction: row;
  flex: 1;
  gap: 16px;
}

.c7 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
}

.c6 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-weight: 700;
}

.c2 {
  padding-bottom: 8px;
  border-bottom: 1px solid #dae0e3;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  min-width: 0;
  gap: 8px;
}

.c5 {
  font-weight: 700;
  line-height: 32px;
}

.c8 {
  font-style: italic;
  text-align: center;
}

.c9 {
  color: #f00;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4 c5"
      >
        <span
          class="c6"
        >
          Column X
        </span>
      </div>
      <div
        class="c3 c4 c5"
      >
        <span
          class="c6"
        >
          Column Y
        </span>
      </div>
    </div>
    <p
      class="c7 c8 c9"
    >
      Some error message!
    </p>
  </div>
</div>
`;

exports[`components/common/Table should render formatted values 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c1 {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c3 {
  display: flex;
  flex-direction: row;
  flex: 1;
  gap: 16px;
}

.c7 {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.c6 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-weight: 700;
}

.c2 {
  padding-bottom: 8px;
  border-bottom: 1px solid #dae0e3;
}

.c8:hover {
  background-color: #f2f7fa;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  min-width: 0;
  gap: 8px;
}

.c5 {
  font-weight: 700;
  line-height: 32px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4 c5"
      >
        <span
          class="c6"
        >
          Column X
        </span>
      </div>
      <div
        class="c3 c4 c5"
      >
        <span
          class="c6"
        >
          Column Y
        </span>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c1 c8"
      >
        <div
          class="c3 c4"
        >
          -Value A-
        </div>
        <div
          class="c3 c4"
        >
          1120
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/common/Table should render loading state 1`] = `
.c1 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c2 {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c4 {
  display: flex;
  flex-direction: row;
  flex: 1;
  gap: 16px;
}

.c8 {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.c0 {
  opacity: 0.65;
  pointer-events: none;
}

.c7 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-weight: 700;
}

.c3 {
  padding-bottom: 8px;
  border-bottom: 1px solid #dae0e3;
}

.c9:hover {
  background-color: #f2f7fa;
}

.c5 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  min-width: 0;
  gap: 8px;
}

.c6 {
  font-weight: 700;
  line-height: 32px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2 c3"
      >
        <div
          class="c4 c5 c6"
        >
          <span
            class="c7"
          >
            Column X
          </span>
        </div>
        <div
          class="c4 c5 c6"
        >
          <span
            class="c7"
          >
            Column Y
          </span>
        </div>
      </div>
      <div
        class="c8"
      >
        <div
          class="c2 c9"
        >
          <div
            class="c4 c5"
          >
            Value A
          </div>
          <div
            class="c4 c5"
          >
            112
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/common/Table should render properly 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c1 {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c3 {
  display: flex;
  flex-direction: row;
  flex: 1;
  gap: 16px;
}

.c7 {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.c6 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-weight: 700;
}

.c2 {
  padding-bottom: 8px;
  border-bottom: 1px solid #dae0e3;
}

.c8:hover {
  background-color: #f2f7fa;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  min-width: 0;
  gap: 8px;
}

.c5 {
  font-weight: 700;
  line-height: 32px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4 c5"
      >
        <span
          class="c6"
        >
          Column X
        </span>
      </div>
      <div
        class="c3 c4 c5"
      >
        <span
          class="c6"
        >
          Column Y
        </span>
      </div>
    </div>
    <div
      class="c7"
    >
      <div
        class="c1 c8"
      >
        <div
          class="c3 c4"
        >
          Value A
        </div>
        <div
          class="c3 c4"
        >
          112
        </div>
      </div>
      <div
        class="c1 c8"
      >
        <div
          class="c3 c4"
        >
          Value B
        </div>
        <div
          class="c3 c4"
        >
          212
        </div>
      </div>
      <div
        class="c1 c8"
      >
        <div
          class="c3 c4"
        >
          Value C
        </div>
        <div
          class="c3 c4"
        >
          312
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/common/Table should sort data 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c1 {
  display: flex;
  flex-direction: row;
  gap: 16px;
}

.c3 {
  display: flex;
  flex-direction: row;
  flex: 1;
  gap: 16px;
}

.c9 {
  display: flex;
  flex-direction: column;
  gap: 0px;
}

.c12 {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.c6 {
  display: block;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
}

.c6:disabled {
  cursor: not-allowed;
}

.c10 {
  position: relative;
  width: 16px;
  height: 8px;
}

.c10>svg {
  position: absolute;
  right: 0;
  height: 16px;
}

.c11 {
  position: relative;
  width: 16px;
  height: 8px;
}

.c11>svg {
  position: absolute;
  right: 0;
  bottom: 0;
  height: 16px;
}

.c7 {
  display: flex;
  align-items: center;
}

.c7:focus {
  outline: 1px dashed #002d56;
}

.c8 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  font-weight: 700;
}

.c2 {
  padding-bottom: 8px;
  border-bottom: 1px solid #dae0e3;
}

.c13:hover {
  background-color: #f2f7fa;
}

.c4 {
  font-family: Tahoma,Verdana,Arial,sans-serif;
  font-size: 14px;
  line-height: 24px;
  color: #002d56;
  min-width: 0;
  gap: 8px;
}

.c5 {
  font-weight: 700;
  line-height: 32px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c3 c4 c5"
      >
        <button
          class="c6 c7"
          title="Seřadit sestupně"
          type="button"
        >
          <span
            class="c8"
          >
            Column X
          </span>
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sort-up fa-lg "
                color="#002d56"
                data-icon="sort-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="c11"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sort-down fa-lg "
                color="#98c3d9"
                data-icon="sort-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 470.6c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-9.2-9.2-11.9-22.9-6.9-34.9s16.6-19.8 29.6-19.8l256 0c12.9 0 24.6 7.8 29.6 19.8s2.2 25.7-6.9 34.9l-128 128z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="c3 c4 c5"
      >
        <button
          class="c6 c7"
          title="Seřadit vzestupně"
          type="button"
        >
          <span
            class="c8"
          >
            Column Y
          </span>
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sort-up fa-lg "
                color="#98c3d9"
                data-icon="sort-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8l256 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              class="c11"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-sort-down fa-lg "
                color="#98c3d9"
                data-icon="sort-down"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M182.6 470.6c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-9.2-9.2-11.9-22.9-6.9-34.9s16.6-19.8 29.6-19.8l256 0c12.9 0 24.6 7.8 29.6 19.8s2.2 25.7-6.9 34.9l-128 128z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <div
      class="c12"
    >
      <div
        class="c1 c13"
      >
        <div
          class="c3 c4"
        >
          Value A
        </div>
        <div
          class="c3 c4"
        >
          112
        </div>
      </div>
      <div
        class="c1 c13"
      >
        <div
          class="c3 c4"
        >
          Value B
        </div>
        <div
          class="c3 c4"
        >
          212
        </div>
      </div>
      <div
        class="c1 c13"
      >
        <div
          class="c3 c4"
        >
          Value C
        </div>
        <div
          class="c3 c4"
        >
          312
        </div>
      </div>
    </div>
  </div>
</div>
`;
